Closed Bug 375832 Opened 18 years ago Closed 18 years ago

non-ascii folders have odd problems

Categories

(MailNews Core :: Backend, defect)

x86
All
defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: baffclan, Assigned: emk)

References

Details

(4 keywords)

Attachments

(1 file)

does not read RSS Feed in non-ascii folder. OK Thunderbird/2007032103-trunk NG Thunderbird/2007032603-trunk, Thunderbird/2007032903-trunk
I see this, assume it's the same bug. If I create a normal pop mail folder called håhå i get it two time after going back to branch. And I had a few feeds that had their folder names garbled too. Caused bug 33451 perhaps?
OS: Windows XP → All
Summary: does not read RSS Feed in non-ascii folder → non-ascii folders have odd problems
Version: unspecified → Trunk
Wow, it's a critical if this happens on Tb2 rc build.
Keywords: jp-critical
No, does only happen on current trunk (i'm on linux), sorry for the confusion. I now realize you don't have to go back to branch to see it, any restart makes it happen. So, STR: - on trunk, make a folder called håhå, everything looks fine - restart, you now have two folders, one håhå and one hÃ¥hÃ¥ (when starting a branch build after this I somehow get two håhå folders showing) Using Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a4pre) Gecko/20070330 Thunderbird/3.0a1 ID:2007033003 [cairo]
Attached patch patchSplinter Review
This should fix the problem
Assignee: mscott → VYV03354
Status: NEW → ASSIGNED
Attachment #260383 - Flags: superreview?(mscott)
Attachment #260383 - Flags: review?(bienvenu)
Component: RSS → MailNews: Backend
Depends on: 33451
Product: Thunderbird → Core
Comment on attachment 260383 [details] [diff] [review] patch thx for the patch
Attachment #260383 - Flags: review?(bienvenu) → review+
Blocks: 33451
No longer depends on: 33451
Attachment #260383 - Flags: superreview?(mscott) → superreview+
Whiteboard: [checkin needed]
checked-in, thank you, emk-san!
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Whiteboard: [checkin needed]
Severity: major → critical
Keywords: dataloss
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: