Bug 375832 non-ascii folders have odd problems. patch by Masatoshi Kimura (:emk)<VYV03354@nifty.ne.jp> r=bienvenu, sr=mscott